v0.4.0
- Added Kinase Library scoring

v0.3.0
- Public release

v0.2.0
- Changed to class-based approach for annotators