@@ -1,3 +1,6 @@
+main
+- Allow multiple peptide matches per protein in PeptidePositionAnnotator
+
 v0.4.0
 - Added Kinase Library scoring
 
